Фикс проверки ресурсов